added many new contents including new potisions, updated skills, etc.

--- a/resume.htm
+++ b/resume.htm
@@ -1,1 +1,154 @@
-It is blank.
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+<html>
+
+<head>
+<title>Resume of Victor Ziliang Peng</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<style type="text/css">
+body,td,th {
+	font-family: serif, Georgia, "Times New Roman", serif, Times;
+}
+body {
+	background-color: #DCDCDC;
+	margin-left: 128px;
+	margin-top: 64px;
+	margin-right: 64px;
+}
+</style>
+</head>
+
+<body>
+<div align="center"><h1>Résumé</h1></div>
+
+
+<h1>Personal Information</h1>                                                  
+<table>                                                                  
+<tr><td><strong>Name(on passport): </strong></td>   <td> Ziliang Peng                                           </td></tr>
+<tr><td><strong>Address:           </strong></td>   <td> 706/39 Grenfell Street, Adelaide, SA, Australia. 5000  </td></tr>
+<tr><td><strong>Mobile:            </strong></td>   <td> (+61) 433023847                                        </td></tr>
+<tr><td><strong>Email:             </strong></td>   <td> Vic.Z.Peng@gmail.com                                   </td></tr>
+</table>
+
+
+
+<hr>
+<h1>Skills</h1>
+<p>Algorithm design , analysis, and implementation</p>
+<ul>
+  <li>Many years' experience of ACM/ICPC-style algorithmic problem-solving.</li>
+  <li>Have experience in designing and building supply chain optimisation engine with various algorithms and optimisation methods, based on client's supply chain design requirements and constraints.</li>
+  <li>Designing and implementing large-scale high performance systems, locating system bottlenecks and improving performance to the last bit.</li>
+</ul>
+<p>Programming skills</p>
+<ul>
+  <li>Writing clean code in C++, Python and Java with practical experience</li>
+  <li>Good understanding of object-oriented paradigm. Can write well encapsulated and modularised code easily understandable by human</li>
+  <li>Functional programming in Python</li>
+  <li>Good troubleshooting and debugging skill</li>
+</ul>
+<p>Tools</p>
+<ul>
+  <li>Hardware: 15" Macbook Pro(8GB RAM, 240G SSD), 24" Dell Monitor, Apple Wireless Keyboard.</li>
+  <li>Operating systems: Mac OS X, Ubuntu Linux, Microsoft Windows</li>
+  <li>Editor/IDE: MacVim, Eclipse, Microsoft Visual Studio</li>
+  <li>Other softwares: Terminal.app, Google Chrome, Python</li>
+</ul>
+<p>General skill:</p>
+<ul>
+  <li>Good communication skills in English(fluent), Cantonese(native), Mandarin(native)</li>
+  <li>Good taste in designing software architecture and frameworks to maximise code understandability and minimise risk of programming errors</li>
+</ul>
+
+
+
+<hr>
+<h1>Technical Interests</h1>
+<ul>
+  <li>Intelligent program to solve large-scale real-world problems, especially on the web</li>
+  <li>Improving performance and latency for systems with large-scale users</li>
+  <li>Distributed storage systems: DRDBMS and/or NoSQL Systems</li>
+  <li>Beautiful and Extensible Software Architecture Design</li>
+</ul>
+
+
+
+<hr>
+<h1>Work Experience</h1>
+<p>ACM/ICPC Coach (Casual) - <b>University of Adelaide</b> (Aug. 2012 - )</p>
+<ul>
+  <li>Introduce junior students to programming competitions</li>
+  <li>Supervise junior students to learn algorithmic knowledges, practice programming skills, and brainstorm problem solutions.</li>
+</ul>
+
+<p>Systems Scientist - <b>SolveIT Software</b> (Jan. 2012 - )</p>
+<ul>
+  <li>Designing and implementing supply chain optimisation engine based on clients' specific requirements</li>
+  <li>Work on integrating core optimisers onto data layer(MSSQL Server) and presentation layer(Java Swing)</li>
+</ul>
+
+<p>'Specialised Programming' Course Supervisor (Casual) - <b>University of Adelaide</b> (Jul. 2010 to Dec. 2011)</p>
+<ul>
+  <li>Help students brainstorming algorithmic solutions for TopCoder-style problems</li>
+  <li>Encourage students to find out defects and bugs in their programs</li>
+</ul>
+
+<p>Software Engineer Intern - <b>Google</b> (Dec. 2010 to Feb. 2011)</p>
+<ul>
+  <li>Worked in Google App Engine team, on the task-queue system</li>
+  <li>Designing APIs for the new 'pull-queue' feature to be backward-compatible with the existing APIs</li>
+  <li>Implemented the RPC layer with protocol-buffer in C++ for the 'pull-queue' API</li>
+  <li>Implemented 'pull-queue' feature in the local simulator in the developer SDK, in both Java and Python</li>
+</ul>
+
+<p>ACM/ICPC Assistant Coach (Volunteer) - <b>Guangdong University of Technology</b> (2008 - 2009)</p>
+<ul>
+  <li>Introduce junior students to programming competitions</li>
+  <li>Supervise the top team on practicing and improving, derive strategy for competition to achieve higher rank.</li>
+  <li>Made it to the World Final</li>
+</ul>
+
+
+<hr>
+<h1>Selected Awards</h1>
+<p>ACM International Collegiate Programming Contest</p>
+<ul>
+  <li>Asian Changchun Regional, Silver Medal, 2007</li>
+  <li>South Pacific Regional, First-ranked in South Australia, 2010</li>
+</ul>
+<p>Guangdong Provincial Collegiate Programming Contest</p>
+<ul>
+  <li>Sixth Place, 2007</li>
+  <li>Third Place, 2008</li>
+</ul>
+
+<p>Google Code Jam</p>
+<ul>
+  <li>Global Rank 637, 2008</li>
+  <li>Global Rank 481, 2009</li>
+  <li>Global Rank 622, 2012</li>
+</ul>
+
+<p>TopCoder College Tour - Guangdong Provincial</p>
+<ul>
+  <li>Third Place, 2007</li>
+  <li>Second Place, 2008</li>
+</ul>
+
+
+
+<hr>
+<h1>Education</h1>
+<p>Guangdong University of Technology (China) - Sept. 2004 to Jul. 2008</p>
+<ul>
+  <li>Bachelor Degree</li>
+  <li>Major: Software Engineering</li>
+  <li>Average Score: 73.5/100</li>
+</ul>
+<p>University of Adelaide (Australia) - Feb. 2010 to Dec. 2011</p>
+<ul>
+  <li>Master Degree</li>
+  <li>Major: Computer Science</li>
+  <li>GPA: 5.688/7</li>
+</ul>
+</body></html>
