--- a/resume.htm
+++ b/resume.htm
@@ -75,25 +75,25 @@ body {
 
 <hr>
 <h1>Work Experience</h1>
-<p>ACM/ICPC Coach (Casual) - <b>University of Adelaide</b> (Aug. 2012 - )</p>
+<p><i><u>ACM/ICPC Coach (Casual)</u></i> - <b>University of Adelaide</b> (Aug. 2012 - )</p>
 <ul>
   <li>Introduce junior students to programming competitions</li>
   <li>Supervise junior students to learn algorithmic knowledges, practice programming skills, and brainstorm problem solutions.</li>
 </ul>
 
-<p>Systems Scientist - <b>SolveIT Software</b> (Jan. 2012 - )</p>
+<p><i><u>Systems Scientist</u></i> - <b>SolveIT Software</b> (Jan. 2012 - )</p>
 <ul>
   <li>Designing and implementing supply chain optimisation engine based on clients' specific requirements</li>
   <li>Work on integrating core optimisers onto data layer(MSSQL Server) and presentation layer(Java Swing)</li>
 </ul>
 
-<p>'Specialised Programming' Course Supervisor (Casual) - <b>University of Adelaide</b> (Jul. 2010 to Dec. 2011)</p>
+<p><i><u>'Specialised Programming' Course Supervisor (Casual)</u></i> - <b>University of Adelaide</b> (Jul. 2010 to Dec. 2011)</p>
 <ul>
   <li>Help students brainstorming algorithmic solutions for TopCoder-style problems</li>
   <li>Encourage students to find out defects and bugs in their programs</li>
 </ul>
 
-<p>Software Engineer Intern - <b>Google</b> (Dec. 2010 to Feb. 2011)</p>
+<p><i><u>Software Engineer Intern</u></i> - <b>Google</b> (Dec. 2010 to Feb. 2011)</p>
 <ul>
   <li>Worked in Google App Engine team, on the task-queue system</li>
   <li>Designing APIs for the new 'pull-queue' feature to be backward-compatible with the existing APIs</li>
@@ -101,7 +101,7 @@ body {
   <li>Implemented 'pull-queue' feature in the local simulator in the developer SDK, in both Java and Python</li>
 </ul>
 
-<p>ACM/ICPC Assistant Coach (Volunteer) - <b>Guangdong University of Technology</b> (2008 - 2009)</p>
+<p><u>ACM/ICPC Assistant Coach (Volunteer)</u></i> - <b>Guangdong University of Technology</b> (2008 - 2009)</p>
 <ul>
   <li>Introduce junior students to programming competitions</li>
   <li>Supervise the top team on practicing and improving, derive strategy for competition to achieve higher rank.</li>
@@ -152,3 +152,10 @@ body {
   <li>GPA: 5.688/7</li>
 </ul>
 </body></html>
+
+
+
+<hr>
+<h1>Links</h1>
+<a href="https://github.com/ziliangdotme">Github Repositories</a><br>
+<a href="http://heishehe.tumblr.com">Blog</a>
