added project euler link, fixed some format issue

--- a/resume.htm
+++ b/resume.htm
@@ -87,13 +87,13 @@ body {
   <li>Work on integrating core optimisers onto data layer(MSSQL Server) and presentation layer(Java Swing)</li>
 </ul>
 
-<p><i><u>'Specialised Programming' Course Supervisor (Casual)</u></i> - <b>University of Adelaide</b> (Jul. 2010 to Dec. 2011)</p>
+<p><i><u>'Specialised Programming' Course Supervisor (Casual)</u></i> - <b>University of Adelaide</b> (Jul. 2010 - Dec. 2011)</p>
 <ul>
   <li>Help students brainstorming algorithmic solutions for TopCoder-style problems</li>
   <li>Encourage students to find out defects and bugs in their programs</li>
 </ul>
 
-<p><i><u>Software Engineer Intern</u></i> - <b>Google</b> (Dec. 2010 to Feb. 2011)</p>
+<p><i><u>Software Engineer Intern</u></i> - <b>Google</b> (Dec. 2010 - Feb. 2011)</p>
 <ul>
   <li>Worked in Google App Engine team, on the task-queue system</li>
   <li>Designing APIs for the new 'pull-queue' feature to be backward-compatible with the existing APIs</li>
@@ -101,11 +101,11 @@ body {
   <li>Implemented 'pull-queue' feature in the local simulator in the developer SDK, in both Java and Python</li>
 </ul>
 
-<p><u>ACM/ICPC Assistant Coach (Volunteer)</u></i> - <b>Guangdong University of Technology</b> (2008 - 2009)</p>
+<p><i><u>ACM/ICPC Assistant Coach (Volunteer)</u></i> - <b>Guangdong University of Technology</b> (2008 - 2009)</p>
 <ul>
   <li>Introduce junior students to programming competitions</li>
   <li>Supervise the top team on practicing and improving, derive strategy for competition to achieve higher rank.</li>
-  <li>Made it to the World Final</li>
+  <li>Advanced to the World Final</li>
 </ul>
 
 
@@ -158,4 +158,5 @@ body {
 <hr>
 <h1>Links</h1>
 <a href="https://github.com/ziliangdotme">Github Repositories</a><br>
-<a href="http://heishehe.tumblr.com">Blog</a>
+<a href="http://heishehe.tumblr.com">Blog</a><br>
+<a href="http://projecteuler.net/profile/ziliang.png">Project Euler</a><br>
