--- a/resume.htm
+++ b/resume.htm
@@ -34,30 +34,24 @@ body {
 
 <hr>
 <h1>Skills</h1>
-<p>Algorithm design , analysis, and implementation</p>
+<p>Analytical skills</p>
 <ul>
-  <li>Many years' experience of ACM/ICPC-style algorithmic problem-solving.</li>
-  <li>Have experience in designing and building supply chain optimisation engine with various algorithms and optimisation methods, based on client's supply chain design requirements and constraints.</li>
-  <li>Designing and implementing large-scale high performance systems, locating system bottlenecks and improving performance to the last bit.</li>
+  <li>Analytical thinking for problem solving</li>
+  <li>Algorithm design and analysis</li>
+  <li>Large-scale high performance system design and performance optimisation</li>
 </ul>
 <p>Programming skills</p>
 <ul>
-  <li>Writing clean code in C++, Python and Java with practical experience</li>
-  <li>Good understanding of object-oriented paradigm. Can write well encapsulated and modularised code easily understandable by human</li>
-  <li>Functional programming in Python</li>
-  <li>Good troubleshooting and debugging skill</li>
+  <li>Solid programming experience from many years' training for ACM/ICPC-style algorithmic problem-solving</li>
+  <li>Good understanding of Object-Oriented Programming and Functional Programming</li>
+  <li>Solid skills in writing clean code in Python/C++/Java, willing to learn other styles of languages</li>
 </ul>
-<p>Tools</p>
-<ul>
-  <li>Hardware: 15" Macbook Pro(8GB RAM, 240G SSD), 24" Dell Monitor, Apple Wireless Keyboard.</li>
-  <li>Operating systems: Mac OS X, Ubuntu Linux, Microsoft Windows</li>
-  <li>Editor/IDE: MacVim, Eclipse, Microsoft Visual Studio</li>
-  <li>Other softwares: Terminal.app, Google Chrome, Python</li>
-</ul>
-<p>General skill:</p>
+<p>General skills</p>
 <ul>
   <li>Good communication skills in English(fluent), Cantonese(native), Mandarin(native)</li>
-  <li>Good taste in designing software architecture and frameworks to maximise code understandability and minimise risk of programming errors</li>
+  <li>Good understanding and interests in Internet products and technologies</li>
+  <li>Good understanding of Artificial Intelligence technologies including data mining and information retrieval</li>
+  <li>Solid background in Computer Science, including knowledge of Programming Languages, Algorithms, Operating Systems, Databases, Computer Networks, etc</li>
 </ul>
 
 
@@ -65,32 +59,21 @@ body {
 <hr>
 <h1>Technical Interests</h1>
 <ul>
-  <li>Intelligent program to solve large-scale real-world problems, especially on the web</li>
-  <li>Improving performance and latency for systems with large-scale users</li>
-  <li>Distributed storage systems: DRDBMS and/or NoSQL Systems</li>
-  <li>Beautiful and Extensible Software Architecture Design</li>
+  <li>Design and implement intelligent program to solve large-scale real-world problems, especially on the web</li>
+  <li>Improve performance and latency for large-scale systems</li>
+  <li>Design beautiful software architecture and write elegant code</li>
 </ul>
 
 
 
 <hr>
 <h1>Work Experience</h1>
-<p><i><u>ACM/ICPC Coach (Casual)</u></i> - <b>University of Adelaide</b> (Aug. 2012 - )</p>
-<ul>
-  <li>Introduce junior students to programming competitions</li>
-  <li>Supervise junior students to learn algorithmic knowledges, practice programming skills, and brainstorm problem solutions.</li>
-</ul>
 
 <p><i><u>Systems Scientist</u></i> - <b>SolveIT Software</b> (Jan. 2012 - )</p>
 <ul>
-  <li>Designing and implementing supply chain optimisation engine based on clients' specific requirements</li>
-  <li>Work on integrating core optimisers onto data layer(MSSQL Server) and presentation layer(Java Swing)</li>
-</ul>
-
-<p><i><u>'Specialised Programming' Course Supervisor (Casual)</u></i> - <b>University of Adelaide</b> (Jul. 2010 - Dec. 2011)</p>
-<ul>
-  <li>Help students brainstorming algorithmic solutions for TopCoder-style problems</li>
-  <li>Encourage students to find out defects and bugs in their programs</li>
+  <li>Simulate operations in supply chain networks based on clients' various business rules</li>
+  <li>Optimize operations in supply chain networks under complex real-world constraints</li>
+  <li>Integrate core optimization engine with other components(data layer and presentation layer</li>
 </ul>
 
 <p><i><u>Software Engineer Intern</u></i> - <b>Google</b> (Dec. 2010 - Feb. 2011)</p>
@@ -101,6 +84,18 @@ body {
   <li>Implemented 'pull-queue' feature in the local simulator in the developer SDK, in both Java and Python</li>
 </ul>
 
+<p><i><u>ACM/ICPC Coach (Casual)</u></i> - <b>University of Adelaide</b> (Aug. 2012 - Sept. 2012)</p>
+<ul>
+  <li>Introduce junior students to programming competitions</li>
+  <li>Supervise junior students to learn algorithmic knowledges, practice programming skills, and brainstorm problem solutions.</li>
+</ul>
+
+<p><i><u>'Specialised Programming' Course Supervisor (Casual)</u></i> - <b>University of Adelaide</b> (Jul. 2010 - Dec. 2011)</p>
+<ul>
+  <li>Help students brainstorming algorithmic solutions for TopCoder-style problems</li>
+  <li>Encourage students to find out defects and bugs in their programs</li>
+</ul>
+
 <p><i><u>ACM/ICPC Assistant Coach (Volunteer)</u></i> - <b>Guangdong University of Technology</b> (2008 - 2009)</p>
 <ul>
   <li>Introduce junior students to programming competitions</li>
@@ -109,17 +104,19 @@ body {
 </ul>
 
 
+
 <hr>
 <h1>Selected Awards</h1>
 <p>ACM International Collegiate Programming Contest</p>
 <ul>
-  <li>Asian Changchun Regional, Silver Medal, 2007</li>
-  <li>South Pacific Regional, First-ranked in South Australia, 2010</li>
+  <li>Silver Medal, 2007, Asian Changchun Regional</li>
+  <li>1st in South Australia, 2010, South Pacific Regional</li>
 </ul>
+
 <p>Guangdong Provincial Collegiate Programming Contest</p>
 <ul>
-  <li>Sixth Place, 2007</li>
-  <li>Third Place, 2008</li>
+  <li>6th Place, 2007</li>
+  <li>3rd Place, 2008</li>
 </ul>
 
 <p>Google Code Jam</p>
@@ -129,10 +126,16 @@ body {
   <li>Global Rank 622, 2012</li>
 </ul>
 
+<p>TopCoder Open</p>
+<ul>
+  <li>Global Top 500, 2007</li>
+  <li>Global Rank 440, 2008</li>
+</ul>
+
 <p>TopCoder College Tour - Guangdong Provincial</p>
 <ul>
-  <li>Third Place, 2007</li>
-  <li>Second Place, 2008</li>
+  <li>3rd Place, 2007</li>
+  <li>2nd Place, 2008</li>
 </ul>
 
 
@@ -158,5 +161,4 @@ body {
 <hr>
 <h1>Links</h1>
 <a href="https://github.com/ziliangdotme">Github Repositories</a><br>
-<a href="http://heishehe.tumblr.com">Blog</a><br>
 <a href="http://projecteuler.net/profile/ziliang.png">Project Euler</a><br>
