--- a/resume.htm
+++ b/resume.htm
@@ -24,34 +24,27 @@ body {
 
 <h1>Personal Information</h1>                                                  
 <table>                                                                  
-<tr><td><strong>Name(on passport): </strong></td>   <td> Ziliang Peng                                           </td></tr>
-<tr><td><strong>Address:           </strong></td>   <td> 706/39 Grenfell Street, Adelaide, SA, Australia. 5000  </td></tr>
-<tr><td><strong>Mobile:            </strong></td>   <td> (+61) 433023847                                        </td></tr>
-<tr><td><strong>Email:             </strong></td>   <td> Vic.Z.Peng@gmail.com                                   </td></tr>
+<tr><td><strong>Name(on passport): </strong></td>   <td> Ziliang Peng                   </td></tr>
+<tr><td><strong>Mobile:            </strong></td>   <td> (+1) (650) 216-8653            </td></tr>
+<tr><td><strong>Email:             </strong></td>   <td> Vic.Z.Peng@gmail.com           </td></tr>
+<tr><td><strong>Work Status:       </strong></td>   <td> E-3 Visa Holder (Australian Worker). Work sponsorship required.           </td></tr>
 </table>
 
 
 
 <hr>
+<h1>Background</h1>
+<p>Dream in distributed systems, scalability, and automation. Solid understanding on algorithms, operating systems, distributed storage/computing systems, RDBMS/NoSQL, OO/functional programming. Will work with any technology to solve problems and make impact at scale. Looking for backend/data/infrastructure engineer role, or any role relates to scalability, performance and automation.</p>
+
+
+<hr>
 <h1>Skills</h1>
-<p>Analytical skills</p>
 <ul>
-  <li>Analytical thinking for problem solving</li>
-  <li>Algorithm design and analysis</li>
-  <li>Large-scale high performance system design and performance optimisation</li>
-</ul>
-<p>Programming skills</p>
-<ul>
-  <li>Solid programming experience from many years' training for ACM/ICPC-style algorithmic problem-solving</li>
-  <li>Good understanding of Object-Oriented Programming and Functional Programming</li>
-  <li>Solid skills in writing clean code in Python/C++/Java, willing to learn other styles of languages</li>
-</ul>
-<p>General skills</p>
-<ul>
-  <li>Good communication skills in English(fluent), Cantonese(native), Mandarin(native)</li>
-  <li>Good understanding and interests in Internet products and technologies</li>
-  <li>Good understanding of Artificial Intelligence technologies including data mining and information retrieval</li>
-  <li>Solid background in Computer Science, including knowledge of Programming Languages, Algorithms, Operating Systems, Databases, Computer Networks, etc</li>
+  <li>Analizing and troubleshooting problems</li>
+  <li>Architecting, optimizing and scaling software and distributed systems</li>
+  <li>Fluently program in Python, Java, C++. Will learn any language of choice.</li>
+  <li>General understanding of full development stack</li>
+  <li>Good communication skills in English(fluent), Cantonese(native), Mandarin(native) working with teams</li>
 </ul>
 
 
@@ -59,9 +52,10 @@ body {
 <hr>
 <h1>Technical Interests</h1>
 <ul>
-  <li>Design and implement intelligent program to solve large-scale real-world problems, especially on the web</li>
-  <li>Improve performance and latency for large-scale systems</li>
-  <li>Design beautiful software architecture and write elegant code</li>
+  <li>Data infrastructure</li>
+  <li>Distributd systems</li>
+  <li>Cluster management systems</li>
+  <li>Data related product features</li>
 </ul>
 
 
@@ -69,38 +63,37 @@ body {
 <hr>
 <h1>Work Experience</h1>
 
-<p><i><u>Systems Scientist</u></i> - <b>SolveIT Software</b> (Jan. 2012 - )</p>
+<p><i><u>Rocket Scientist (Senior Cloud Engineer)</u></i> - <b>Rocket Fuel Inc.</b> (Nov. 2014 - )</p>
 <ul>
-  <li>Simulate operations in supply chain networks based on clients' various business rules</li>
-  <li>Optimize operations in supply chain networks under complex real-world constraints</li>
-  <li>Integrate core optimization engine with other components(data layer and presentation layer</li>
+  <li>Develop new features for ad-serving platform and integrate with data infrastructure</li>
+  <li>Scaling internal tools for ad performance analysis</li>
+</ul>
+
+<p><i><u>Systems Scientist (Algorithm Engineer)</u></i> - <b>SolveIT Software</b> (Jan. 2012 - Nov. 2013)</p>
+<ul>
+  <li>Requirement analysis for supply chain optimization problems</li>
+  <li>Design/implement/optimize algorithms for supply chain network</li>
+  <li>Integrate algorithm engine to product stack (DB, UI, etc.)</li>
 </ul>
 
 <p><i><u>Software Engineer Intern</u></i> - <b>Google</b> (Dec. 2010 - Feb. 2011)</p>
 <ul>
-  <li>Worked in Google App Engine team, on the task-queue system</li>
-  <li>Designing APIs for the new 'pull-queue' feature to be backward-compatible with the existing APIs</li>
-  <li>Implemented the RPC layer with protocol-buffer in C++ for the 'pull-queue' API</li>
-  <li>Implemented 'pull-queue' feature in the local simulator in the developer SDK, in both Java and Python</li>
+  <li>Design backward compatible APIs for pull-queue feature in Google App Engine's task-queue API</li>
+  <li>Implemented the RPC layer for the pull-queue APIs, Protocol Buffer, C++</li>
+  <li>Implemented pull-queue feature in the developer SDK (local machine simulator), Java and Python</li>
 </ul>
 
-<p><i><u>ACM/ICPC Coach (Casual)</u></i> - <b>University of Adelaide</b> (Aug. 2012 - Sept. 2012)</p>
+<p><i><u>Programming Course Supervisor/ACM ICPC Coach</u></i> - <b>University of Adelaide</b> (Jul. 2010 - Dec. 2011, Aug. 2012 - Sept. 2012)</p>
 <ul>
-  <li>Introduce junior students to programming competitions</li>
-  <li>Supervise junior students to learn algorithmic knowledges, practice programming skills, and brainstorm problem solutions.</li>
+  <li>Teaching and supervising students on brainstorming/troubleshooting solutions to algorithmic problems</li>
+  <li>ICPC skills and strategy coaching</li>
 </ul>
 
-<p><i><u>'Specialised Programming' Course Supervisor (Casual)</u></i> - <b>University of Adelaide</b> (Jul. 2010 - Dec. 2011)</p>
+<p><i><u>ACM/ICPC Founding Member/Team Lead/Assistant Coach</u></i> - <b>Guangdong University of Technology</b> (2006 - 2009)</p>
 <ul>
-  <li>Help students brainstorming algorithmic solutions for TopCoder-style problems</li>
-  <li>Encourage students to find out defects and bugs in their programs</li>
-</ul>
-
-<p><i><u>ACM/ICPC Assistant Coach (Volunteer)</u></i> - <b>Guangdong University of Technology</b> (2008 - 2009)</p>
-<ul>
-  <li>Introduce junior students to programming competitions</li>
-  <li>Supervise the top team on practicing and improving, derive strategy for competition to achieve higher rank.</li>
-  <li>Advanced to the World Final</li>
+  <li>Founded and led team, achieved first medal in history</li>
+  <li>Hiring, training new members, organizing teams and competitions</li>
+  <li>Coaching (after retired from competition) top performing team, achieved first World Final advancement</li>
 </ul>
 
 
@@ -110,20 +103,16 @@ body {
 <p>ACM International Collegiate Programming Contest</p>
 <ul>
   <li>Silver Medal, 2007, Asian Changchun Regional</li>
-  <li>1st in South Australia, 2010, South Pacific Regional</li>
-</ul>
-
-<p>Guangdong Provincial Collegiate Programming Contest</p>
-<ul>
-  <li>6th Place, 2007</li>
-  <li>3rd Place, 2008</li>
+  <li>Rank 10, Pacific Regional (Australia and New Zealand)</li>
 </ul>
 
 <p>Google Code Jam</p>
 <ul>
-  <li>Global Rank 637, 2008</li>
-  <li>Global Rank 481, 2009</li>
-  <li>Global Rank 622, 2012</li>
+  <li>Global Rank 637(Round 2), 2008</li>
+  <li>Global Rank 481(Round 2), 2009</li>
+  <li>Global Rank 622(Round 2), 2012</li>
+  <li>Global Rank 130(Round 3), 2013</li>
+  <li>Global Rank 613(Round 2), 2015</li>
 </ul>
 
 <p>TopCoder Open</p>
@@ -132,26 +121,18 @@ body {
   <li>Global Rank 440, 2008</li>
 </ul>
 
-<p>TopCoder College Tour - Guangdong Provincial</p>
-<ul>
-  <li>3rd Place, 2007</li>
-  <li>2nd Place, 2008</li>
-</ul>
-
 
 
 <hr>
 <h1>Education</h1>
 <p>Guangdong University of Technology (China) - Sept. 2004 to Jul. 2008</p>
 <ul>
-  <li>Bachelor Degree</li>
-  <li>Major: Software Engineering</li>
+  <li>Bachelor of Software Engineering</li>
   <li>Average Score: 73.5/100</li>
 </ul>
 <p>University of Adelaide (Australia) - Feb. 2010 to Dec. 2011</p>
 <ul>
-  <li>Master Degree</li>
-  <li>Major: Computer Science</li>
+  <li>Master of Computer Science</li>
   <li>GPA: 5.688/7</li>
 </ul>
 </body></html>
@@ -160,5 +141,4 @@ body {
 
 <hr>
 <h1>Links</h1>
-<a href="https://github.com/ziliangdotme">Github Repositories</a><br>
-<a href="http://projecteuler.net/profile/ziliang.png">Project Euler</a><br>
+Github Repositories: <i>ziliangdotme</i><br>
